--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,6 @@
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
-.idea/*
 
 # AWS User-specific
 .idea/**/aws.xml
@@ -78,3 +77,5 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
+### IntelliJ IDEA ###
+.idea
