--- a/chordzilla/pom.xml
+++ b/chordzilla/pom.xml
@@ -70,9 +70,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>2.0.16</version>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.5.8</version>
         </dependency>
 
         <dependency>
@@ -114,7 +114,15 @@
                     </execution>
                 </executions>
             </plugin>
-		</plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.3.0</version>
+                <configuration>
+                    <mainClass>br.edu.ufabc.mfmachado.chordzilla.App</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
 	</build>
 
 </project>
