--- a/codehub/pom.xml
+++ b/codehub/pom.xml
@@ -54,6 +54,12 @@
             <artifactId>chordzilla</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.11.0</version>
+        </dependency>
+
     </dependencies>
 
 	<build>
@@ -70,6 +76,14 @@
 					</excludes>
 				</configuration>
 			</plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.3.0</version>
+                <configuration>
+                    <mainClass>br.edu.ufabc.mfmachado.chordzilla.App</mainClass>
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
 
